# cloudwatch_metrics_agent

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: cloudwatch.rs  config.rs  lib.rs  main.rs  memory.rs  metrics.rs  publisher.rs
