[package]
name = "cloudwatch_metrics_agent"
version = "0.1.0"
edition = "2021"
authors = ["theirix@gmail.com"]
repository = "https://github.com/theirix/cloudwatch_metric_agent"
license = "MIT"
readme = "README.md"
description = "An agent for sending custom CPU and memory metrics to Cloudwatch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.6.0"
aws-sdk-cloudwatch = "0.6.0"
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
sysinfo = "0.23.0"
chrono = "0.4.19"
more-asserts = "0.2.2"
async-trait = "0.1.52"
rstats = "1.0.8"
log = "~0.4"
env_logger = "~0.9"
