[package]
name = "cloudwatch_metrics_agent"
version = "0.1.4"
edition = "2021"
authors = ["theirix <theirix@gmail.com>"]
repository = "https://github.com/theirix/cloudwatch_metrics_agent"
license = "MIT"
readme = "README.md"
description = "An agent for sending custom CPU and memory metrics to Cloudwatch"
categories = ["command-line-utilities"]
keywords = ["aws", "metrics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.6.0"
aws-sdk-cloudwatch = "0.6.0"
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
sysinfo = "0.23.0"
chrono = "0.4.19"
more-asserts = "0.2.2"
async-trait = "0.1.52"
rstats = "1.0.8"
log = "~0.4"
env_logger = { version = "~0.9", features = ["atty"] }
atty = "^0.2"

[dev-dependencies]
test-log = "0.2.8"
